2021-08-20  Tim Nguyen  <ntim@apple.com>

        Initial implementation of inert subtrees
        https://bugs.webkit.org/show_bug.cgi?id=110952

        Reviewed by Antti Koivisto.

        Currently covers:
        - Blocking focus & selecting
        - aria-hidden like behaviour

        Hit testing/event retargeting will be covered by https://bugs.webkit.org/show_bug.cgi?id=229330 pending a spec issue

        Relevant WPT enabled. More testing coverage will be provided with the inert attribute.

        * accessibility/AccessibilityObject.cpp:
        (WebCore::AccessibilityObject::isAXHidden const):
        * dom/Element.cpp:
        (WebCore::Element::isFocusable const):
        * dom/Node.cpp:
        (WebCore::Node::canStartSelection const):
        (WebCore::Node::isInert const):
        * dom/Node.h:

2021-08-20  Alan Bujtas  <zalan@apple.com>

        [LFC][Integration] line-clamp is an unsupported CSS property
        https://bugs.webkit.org/show_bug.cgi?id=228794

        Reviewed by Simon Fraser.

        Let's bail out on -webkit-line-clamp instead of the presence of a deprecated flex box. While line clamping requires legacy line layout, regular flex item content is fine with either line layout codepaths. 

        * layout/integration/LayoutIntegrationCoverage.cpp:
        (WebCore::LayoutIntegration::printReason):
        (WebCore::LayoutIntegration::canUseForLineLayoutWithReason):
        * layout/integration/LayoutIntegrationCoverage.h:

2021-08-20  Alan Bujtas  <zalan@apple.com>

        [IFC][Integration] Enable non-auto line-break values
        https://bugs.webkit.org/show_bug.cgi?id=228842

        Reviewed by Antti Koivisto.

        IFC already supports line-break.

        * layout/integration/LayoutIntegrationCoverage.cpp:
        (WebCore::LayoutIntegration::canUseForStyle):

2021-08-20  Alan Bujtas  <zalan@apple.com>

        [LFC][IFC] Add support for -webkit-nbsp-mode: space
        https://bugs.webkit.org/show_bug.cgi?id=228805
